--- a/src/pages/NuestrosCafes/styles.scss
+++ b/src/pages/NuestrosCafes/styles.scss
@@ -14,12 +14,14 @@
             rgb(14, 14, 14) 70%,
             rgb(17, 17, 17) 100%
         );
-        height: 100vh;
+        min-height: 100vh;
         width: 100%;
         display: flex;
         align-items: center;
-        justify-content: center;
+        justify-content: flex-start;
         flex-direction: column;
+        padding-top: 160px;
+        box-sizing: border-box;
     }
     &__title {
         text-align: center;
@@ -156,12 +158,14 @@
             rgb(14, 14, 14) 70%,
             rgb(17, 17, 17) 100%
         );
-        height: 100vh;
+        min-height: 100vh;
         width: 100%;
         display: flex;
         align-items: center;
-        justify-content: center;
+        justify-content: flex-start;
         flex-direction: column;
+        padding-top: 160px;
+        box-sizing: border-box;
     }
     &__title {
         text-align: center;
@@ -301,12 +305,14 @@
             rgb(14, 14, 14) 70%,
             rgb(17, 17, 17) 100%
         );
-        height: 100vh;
+        min-height: 100vh;
         width: 100%;
         display: flex;
         align-items: center;
-        justify-content: center;
+        justify-content: flex-start;
         flex-direction: column;
+        padding-top: 160px;
+        box-sizing: border-box;
     }
     &__title {
         text-align: center;
@@ -375,12 +381,14 @@
             rgb(14, 14, 14) 70%,
             rgb(17, 17, 17) 100%
         );
-        height: 100vh;
+        min-height: 100vh;
         width: 100%;
         display: flex;
         align-items: center;
-        justify-content: center;
+        justify-content: flex-start;
         flex-direction: column;
+        padding-top: 160px;
+        box-sizing: border-box;
     }
     &__title {
         text-align: center;
@@ -525,12 +533,14 @@
             rgb(14, 14, 14) 70%,
             rgb(17, 17, 17) 100%
         );
-        height: 100vh;
+        min-height: 100vh;
         width: 100%;
         display: flex;
         align-items: center;
-        justify-content: center;
+        justify-content: flex-start;
         flex-direction: column;
+        padding-top: 160px;
+        box-sizing: border-box;
     }
     &__title {
         text-align: center;
